# template_python_project

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  docker-compose.yml  pyproject.toml
ci/: Dockerfile
ci/app/: Dockerfile  docker-entrypoint.sh
ci/database/: Dockerfile  init.sql
configs/: containerised.yml  local.yml
scripts/: run_migration.py
src/: __main__.py  app.py
src/adapters/: logger.py  settings.py
src/adapters/database/: alembic_config.py  config.py  sql_store.py
src/adapters/database/migrations/: env.py
src/adapters/database/migrations/versions/: 20240312-instantiation.py  20240313-instantiation.py  20240401-instantiation.py
src/adapters/database/tables/: data.py
src/controllers/: api.py
src/controllers/api_routers/: db.py
src/core/interactors/: api_db_crud.py  db_crud.py
src/core/models/: configs.py  data.py  exceptions.py
src/core/models/api_routers/: db.py
src/core/ports/: logging.py  settings.py  store.py
src/utils/: settings.py
