[tool.poetry]
name = "template-python"
version = "0.1.0"
description = ""
authors = ["Ben Wolfaardt <benjaminwolfaardt@gmail.com>"]
readme = "README.md"
packages = [{include = "template_python"}]
#TODO determine licence
license = ""

[tool.poetry.dependencies]
python = "^3.11.3"

envyaml = "1.10.211231"

[tool.poetry.group.dev.dependencies]
bandit = {version = "1.7.5", extras = ["toml"]}
black = "23.3.0"
dotenv-linter = "0.4.0"
flake8 = "6.0.0"
isort = "5.12.0"
mypy = "1.4.1"
pre-commit = "3.3.3"
pre-commit-hooks = "4.4.0"
pyupgrade = "3.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.bandit]
exclude_dirs = ["*/tests/*"]
tests = ["B201", "B301"]
skips = ["B101", "B601"]

[tool.black]
line-length = 110
target-version = ['py310']

[tool.flake8]
ignore = ['E231', 'E241', 'E501', 'E203', 'W503']
per-file-ignores = [
    '__init__.py:F401'
]
max-line-length = 110
exclude = [
    '.git',
    '__pycache__',
    '.venv',
    '.mypy_cache',
    '.pytest_cache',
    '.github'
]

[tool.isort]
profile = "black"
force_single_line = false
lines_after_imports = 2
lines_between_types = 1
use_parentheses = true
src_paths = ["src", "tests"]

[tool.mypy]
python_version = "3.11"

check_untyped_defs = true
disallow_untyped_defs = true
incremental = false
ignore_errors = false
pretty = true
show_error_context = true
show_traceback = true
strict_optional = true
warn_incomplete_stub = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "envyaml.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
log_cli = 0
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
python_files = ["test_*.py"]
testpaths = ["tests"]
